--- a/index.html
+++ b/index.html
@@ -8,5 +8,17 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img
+       src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    />
+    <img
+        src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+        alt="amazon pics"
+    />
+    <img
+        src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+        alt="amazon pics"
+        title="my picture"
+    />
   </body>
 </html>
